--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="send_sms">Send SMS</string>
     <string name="write_down_the_phone_number_here">Write down the phone number here.</string>
-    <string name="heart_beat_rate">HEART BEAT RATE</string>
+    <string name="heart_beat_rate">HEART RATE</string>
     <string name="bpm">bpm</string>
     <string name="itu_ehb_408e_course_project">ITU EHB 408E Course Project</string>
     <string name="save">Save</string>
